fix design on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,7 @@ body {
 /* This is global styles for the game container and elements */
 /* game-container is the main wrapper for the game grid and elements */
 .game-container {
+  width: 100%!important;
   background-color: #18181b; /* zinc-900 */
   color: #e4e4e7;           /* zinc-200 */
 }
@@ -113,7 +114,7 @@ body {
 
 /* deck is the style for the deck container */
 .deck {
-  background-color: #27272a;
+  /* background-color: #27272a; */
   color: #d4d4d8;           /* zinc-300 */
 }
 
@@ -125,11 +126,18 @@ body {
   /* transform-origin: top center; */
 }
 
-@media (min-width: 900px) {
+/* Scale the game container on MOBILE */
+
+/* @media (min-width: 600px) {
   .game-container {
-    /* transform: scale(1.5); */
+    transform: scale(0.8);
   }
-}
+} */
+/* @media (min-width: 900px) {
+  .game-container {
+    transform: scale(1.5);
+  }
+} */
 
 @media (max-width: 600px) and (orientation: landscape) {
   .game-container {
